--- a/index.css
+++ b/index.css
@@ -19,7 +19,6 @@ h1, body > p {
     border: 2.5px solid #c1c1c1;
     border-radius: 10px;
     max-width: 800px;
-;
 }
 
 .container > div {
@@ -28,6 +27,9 @@ h1, body > p {
 
 .job > li {
     font-weight: bold;
+}
+
+.job> li:not(:first-child) {
     margin-top: 20px;
 }
 
@@ -43,4 +45,8 @@ ul div {
 
 hr {
     margin-bottom: 20px;
+}
+
+.job {
+    margin-top: 0px;
 }
